fix header css on mobile

--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -14,7 +14,7 @@
   align-items: center;
 
   /* min-height: 75vh; */
-  height: 75%;
+  height: 75vh;
 }
 
 .heroImage {
@@ -29,7 +29,10 @@
 
     align-items: flex-start;
 
-    min-height: 75%;
+    min-height: 75vh;
+
+    height: auto;
+  
   }
 
   .heroRightColumn > h1 {
